--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,23 +10,8 @@ body {
   box-sizing: border-box;
 }
 
-main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
-code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
-}
-
-.container {
+.dengcontainer {
   height: 100%;
   min-height: 100vh;
   display: flex;
@@ -38,8 +23,8 @@ code {
 
 .dengimage{
     display: block;
-    min-width: 100%;
-    min-height:100%;
+    min-width: 100vw;
+    min-height:100vh;
     object-fit:contain;
     object-position: center;
 
@@ -47,14 +32,14 @@ code {
 
 .denglink{
     position: fixed;
-color: white;
-bottom: 20px;
-font-weight: bold;
-right: 20px;
-text-shadow: 2px 2px 2px black;
-text-decoration: none;
+    color: white;
+    bottom: 20px;
+    font-weight: bold;
+    right: 20px;
+    text-shadow: 2px 2px 2px black;
+    text-decoration: none;
 }
-.denglink:hover {
+.denglink:hover, .denglink:focus {
     animation: deng 0.5s cubic-bezier(.36,.07,.19,.97) both;
     transform: translate3d(0, 0, 0);
     backface-visibility: hidden;
