--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,21 +12,20 @@ body {
 
 
 .dengcontainer {
-  height: 100%;
-  min-height: 100vh;
-  display: flex;
+  height: 100vh;
+  
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  width: 100%;
+  align-items: center; */
+  width: 100vw;
 }
 
 .dengimage{
-    display: block;
-    min-width: 100vw;
-    min-height:100vh;
-    object-fit:contain;
-    object-position: center;
+    min-width: 100%;
+    min-height:100%;  
+    object-fit:cover; 
+     object-position: center;
 
 }
 
