--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,7 @@ body {
 .dengimage{
     min-width: 100%;
     min-height:100%;  
+    width: 100%;
     object-fit:cover; 
      object-position: center;
 
