--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,11 +22,12 @@ body {
 }
 
 .dengimage{
-    min-width: 100%;
+    display: block;
+    /* min-width: 100%;
     min-height:100%;  
     width: 100%;
     object-fit:cover; 
-     object-position: center;
+     object-position: center; */
 
 }
 
