--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,8 @@
 html,
 body {
+    height: 100%;
+  
+  width: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
@@ -12,13 +15,22 @@ body {
 
 
 .dengcontainer {
-  height: 100vh;
+  height: 100%;
   
   /* display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center; */
-  width: 100vw;
+  width: 100%;
+}
+.dengcontainer2{
+    height: 100%;
+  
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
+  width: 100%;
 }
 
 .dengimage{
