--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,14 @@ body {
     height: 100%;
   
   width: 100%;
+  overflow: hidden;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+body{
+    overflow: scroll;
 }
 
 * {
